--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,49 +4,26 @@
     <title>BuildingFacebook</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-        rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous"
-      />
-      <link
-        rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      />
-        <%= render 'layouts/rails_default' %>
-        <%= render 'layouts/shim' %>
-      </head>
-      <body>
-        <%= render 'layouts/nav' %>
-        <% flash.each do |message_type, message| %>
-          <div class="alert alert-<%= message_type %>"><%= message %></div>
-        <% end %>
-        <div class="row r-con">
-          <div class="col-xl-2 col-lg-2 sidebar">
-            <%= render 'layouts/left_sidemenu' %>
-          </div>
-          <div class="col-xl-7 col-lg-7">
-            <%= render 'layouts/posting_block' %>
-            <%= yield %>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-3"></div>
+    <%= render 'layouts/bootstrap_calls' %>
+    <%= render 'layouts/rails_default' %>
+    <%= render 'layouts/shim' %>
+  </head>
+  <body>
+    <%= render 'layouts/nav' %>
+    <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
+    <% end %>
+    <div class="row r-con">
+      <div class="col-xl-2 col-lg-2 sidebar">
+        <%= render 'layouts/left_sidemenu' %>
       </div>
-      <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-      <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-      <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-    </body>
-  </html>
+      <div class="col-xl-7 col-lg-7">
+        <%= render 'layouts/posting_block' %>
+        <%= yield %>
+      </div>
+    </div>
+    <div class="col-xl-3 col-lg-3"></div>
+  </div>
+  <%= render 'layouts/footer_scripts' %>
+</body>
+</html>
