--- a/app/views/friendships/your_friends.html.erb
+++ b/app/views/friendships/your_friends.html.erb
@@ -36,6 +36,8 @@
     <% end %>
   <% else %>
     <!--------You have no friends yet--------->
-    <h2> YOU HAVE NO FRIENDS YET </h2>
+    <br/>
+    <br/>
+    <em>YOU HAVE NO FRIENDS YET !!! </em>
   <% end %>
 </div>
