changing some links in nav bar

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -61,7 +61,7 @@
               </div>
               <div class="col-xl-6">
                 <p class="text-f text-right">
-                  <a href="#">
+                  <a href="/profiles/<%=@logged_user.id%>">
                     Profile
                   </a>
                   |
