--- a/app/views/layouts/_left_sidemenu.html.erb
+++ b/app/views/layouts/_left_sidemenu.html.erb
@@ -6,7 +6,7 @@
             >
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/friendships/your_friends" title="view frienships">
+    <a class="nav-link" href="/friendships" title="view frienships">
       <i class="fa fa-users" aria-hidden="true"></i>
       FRIENDSHIPS</a
             >
