--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -11,6 +11,6 @@
       <%= link_to('Edit Account', edit_user_registration_path) %>
     </li>
   <% else %>
-    <li><%= link_to('Login via facebook', user_facebook_omniauth_authorize_path) %></li>
+    <li> <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %></li>
   <% end %>
 </div>
