Fixed code review of 16 JULY

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -179,6 +179,14 @@ body {
     left: -9px;
 }
 
+//------------------------------------------
 .already-like-thumbs {
     color: #007bff;
 }
+
+.small-links {
+    color: #44619d;
+    font-size: 0.75em;
+}
+
+//------------------------------------------
