--- a/app/views/dashboard/home_page.html.erb
+++ b/app/views/dashboard/home_page.html.erb
@@ -24,9 +24,7 @@
         <% end %>
       <% else %>
         <!--already like-->
-        <button type="button" class="btn btn-light">
-          <i class="fa fa-thumbs-up already-like-thumbs" aria-hidden="true"></i> You Liked
-        </button>
+        <span class="already-like-thumbs" > You Liked</span>
       <% end %>
       <button
               type="button"
@@ -39,6 +37,15 @@
         <i class="fa fa-comments" aria-hidden="true"></i>
         See comments
       </button>
+      <% if p.author == @logged_user %>
+        <!--if post owner-->
+        <% session[:return_url] ||= request.referer %>
+        <%= link_to post_path(p), method: :delete do %>
+          <button type="button" class="btn btn-light">
+            <i class="fa fa-trash"></i> Delete Post
+          </button>
+        <% end %>
+      <% end %>
       <div class="collapse" id="collapse<%= index %>">
         <div class="card card-body">
           <% p.post_comments.each do |comment| %>
@@ -52,11 +59,17 @@
                   <em><%= comment.created_at.strftime(", %B %d at %I:%M %p")%> </em>
                 </p>
                 <p>
-                  <%=  strip_tags(comment.comment_text) %>
+                  <%=  strip_tags(comment.comment_text) %> <br>
+                  <% if p.author == @logged_user %>
+                    <!--if COMMENT OWNER-->
+                    <% session[:return_to] ||= request.referer %>
+                    <%= link_to post_comment_path(comment), class: "small-links", method: :delete do %>
+                      <i class="fa fa-trash"></i> <em>Delete comment</em>
+                    <% end %>
+                  <% end %>
                 </p>
               </div>
             </div>
-            <hr>
           <% end %>
           <hr>
           <div class="comment-row row">
