styled the landing_page, dashboard and profile

--- a/app/views/layouts/_left_sidemenu.html.erb
+++ b/app/views/layouts/_left_sidemenu.html.erb
@@ -2,7 +2,13 @@
   <li class="nav-item">
     <a class="nav-link" href="/profiles/<%=@logged_user.id%>" title="view Profile">
       <i class="fa fa-user-circle" aria-hidden="true"></i>
-      <%= @logged_user.name.upcase%></a
+      <%= @logged_user.name%></a
+            >
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="<%= dashboard_home_page_path(:uuid => "#{@logged_user.id.to_s}356a19")%>" title="visit Newsfeed">
+      <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+      News feed</a
             >
   </li>
   <li class="nav-item">
