--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -26,7 +26,7 @@
         <li class="nav-item active">
           <a class="nav-link nav-link2" href="/profiles/<%=@logged_user.id%>" title="view Profile">
             <i class="fa fa-user-circle" aria-hidden="true"></i>
-            <%= @logged_user.name.upcase%>'s PROFILE <span class="sr-only">(current)</span></a
+            <%= @logged_user.name%>'s Profile <span class="sr-only">(current)</span></a
             >
         </li>
         <li class="nav-item ">
