--- a/app/views/layouts/_footer_scripts.html.erb
+++ b/app/views/layouts/_footer_scripts.html.erb
@@ -9,7 +9,5 @@
       crossorigin="anonymous"
     ></script>
 <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
+      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.js"
     ></script>
