--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -42,6 +42,7 @@
               id="navbarDropdown"
               role="button"
               data-toggle="dropdown"
+              data-target = "test-drop"
               aria-haspopup="true"
               aria-expanded="false"
             >
@@ -54,7 +55,7 @@
             <% end %>
             <!---notification---->
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div id="test-drop" class="dropdown-menu" aria-labelledby="navbarDropdown">
             <div class="row friend-title-con">
               <div class="col-xl-6">
                 <p class="text-f text-left">Other notifications</p>
@@ -90,12 +91,12 @@
                     </div>
                     <div class="col-xl-6 ">
                       <%= link_to accept_request_friendships_path(friendshipid: friendship) do %>
-                        <button type="button" class="btn btn-light btn-sm">
+                        <button type="button" class="btn btn-outline-secondary btn-sm">
                           Add Friend
                         </button>
                       <% end %>
                       <%= link_to turn_down_friendship_path(friendship), method: :delete do %>
-                        <button type="button" class="btn btn-light btn-sm">
+                        <button type="button" class="btn btn-outline-secondary btn-sm">
                           Remove
                         </button>
                       <% end %>
