--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,11 +21,11 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <%= f.label :password %>
-      <%= f.password_field :password, autocomplete: "new-password" , class:"form-control", id:"inputPassword4", placeholder:"password"%>
+      <%= f.password_field :password, autocomplete: "new-password" , class:"form-control", id:"inputPassword", placeholder:"password"%>
     </div>
     <div class="form-group col-md-6">
       <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" , class:"form-control", id:"inputPassword4", placeholder:"password"%>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" , class:"form-control", id:"inputPassword2", placeholder:"password"%>
     </div>
   </div>
   <!----passwords(end)--->
