styled the login and registration error pages

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -39,13 +39,9 @@
           </div>
         </nav>
         <!----nav---->
-        <div class="container">
-          <div class="d-flex justify-content-end row">
+        <div class="d-flex justify-content-center row">
+          <div class="col-xl-6 col-md-6">
             <%= yield %>
-            <div class="col-xl-5 col-md-5">
-              <!------SIGN_UP-------------->
-              <!------SIGN_UP [END]-------------->
-            </div>
           </div>
         </div>
         <script
