--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -45,8 +45,10 @@
       <%= label :gender, 'Female', class:"form-check-label" %>
     </div>
   </div>
-  <div class="form-group"></div>
-  <button type="submit" class="btn btn-success col-md-5">
-    Sign up
-  </button>
+  <div class="form-group d-flex justify-content-center">
+    <button type="submit" class="btn btn-success col-md-5">
+      Sign up
+    </button>
+  </div>
 <% end %>
+<%= render "devise/shared/links" %>
