added the github link to the project

--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -9,4 +9,7 @@
   <% else %>
     <%= button_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class: "btn btn-outline-secondary btn-sm", name:"facebookLogin" %>
   <% end %>
+  <div class="github-link">
+    <a href="https://github.com/shloch/Building_Facebook"><button class="btn btn-dark">Link to the GitHub Repo <i class="fa fa-github"></i></button></a>
+  </div>
 </div>
